--- a/financeScraper/financeScraper.csproj
+++ b/financeScraper/financeScraper.csproj
@@ -69,6 +69,9 @@
     <Reference Include="nunit.framework, Version=3.12.0.0, Culture=neutral, PublicKeyToken=2638cd05610744eb, processorArchitecture=MSIL">
       <HintPath>..\packages\NUnit.3.12.0\lib\net45\nunit.framework.dll</HintPath>
     </Reference>
+    <Reference Include="SeleniumExtras.WaitHelpers, Version=3.11.0.0, Culture=neutral, processorArchitecture=MSIL">
+      <HintPath>..\packages\DotNetSeleniumExtras.WaitHelpers.3.11.0\lib\net45\SeleniumExtras.WaitHelpers.dll</HintPath>
+    </Reference>
     <Reference Include="System" />
     <Reference Include="System.ComponentModel.DataAnnotations" />
     <Reference Include="System.Core" />
@@ -93,6 +96,7 @@
   </ItemGroup>
   <ItemGroup>
     <Compile Include="DTPrint.cs" />
+    <Compile Include="Entity\CodeFirst.cs" />
     <Compile Include="HTMLAgilityPack\Export.cs" />
     <Compile Include="HTMLAgilityPack\FromFile.cs" />
     <Compile Include="HTMLAgilityPack\ListConverter.cs" />
@@ -103,7 +107,6 @@
     <Compile Include="Properties\AssemblyInfo.cs" />
     <Compile Include="HTMLAgilityPack\ScrapedDatabase.cs" />
     <Compile Include="HTMLAgilityPack\Search.cs" />
-    <Compile Include="Selenium\Selenium.cs" />
     <Compile Include="Selenium\YahooFinance.cs" />
   </ItemGroup>
   <ItemGroup>
@@ -134,9 +137,7 @@
   <ItemGroup>
     <Service Include="{508349B6-6B84-4DF5-91F0-309BEEBAD82D}" />
   </ItemGroup>
-  <ItemGroup>
-    <Folder Include="Entity\" />
-  </ItemGroup>
+  <ItemGroup />
   <Import Project="$(MSBuildToolsPath)\Microsoft.CSharp.targets" />
   <Target Name="EnsureNuGetPackageBuildImports" BeforeTargets="PrepareForBuild">
     <PropertyGroup>
