--- a/financeScraper/packages.config
+++ b/financeScraper/packages.config
@@ -1,5 +1,6 @@
 ﻿<?xml version="1.0" encoding="utf-8"?>
 <packages>
+  <package id="DotNetSeleniumExtras.WaitHelpers" version="3.11.0" targetFramework="net472" />
   <package id="EntityFramework" version="6.2.0" targetFramework="net472" />
   <package id="HtmlAgilityPack" version="1.11.7" targetFramework="net472" />
   <package id="Microsoft.CodeCoverage" version="16.1.1" targetFramework="net472" />
