--- a/financeScraper/packages.config
+++ b/financeScraper/packages.config
@@ -2,9 +2,12 @@
 <packages>
   <package id="DotNetSeleniumExtras.WaitHelpers" version="3.11.0" targetFramework="net472" />
   <package id="EntityFramework" version="6.2.0" targetFramework="net472" />
+  <package id="EntityFramework.SqlServerCompact" version="6.2.0" targetFramework="net472" />
+  <package id="EntityFramework.SqlServerCompact.Legacy" version="6.2.0" targetFramework="net472" />
   <package id="HtmlAgilityPack" version="1.11.7" targetFramework="net472" />
   <package id="Microsoft.CodeCoverage" version="16.1.1" targetFramework="net472" />
   <package id="Microsoft.NET.Test.Sdk" version="16.1.1" targetFramework="net472" />
+  <package id="Microsoft.SqlServer.Compact" version="4.0.8876.1" targetFramework="net472" />
   <package id="NUnit" version="3.12.0" targetFramework="net472" />
   <package id="NUnit.Console" version="3.10.0" targetFramework="net472" />
   <package id="NUnit.ConsoleRunner" version="3.10.0" targetFramework="net472" />
